RESOLVED FIXED210936
Long pressing attachments in Notes does not activate Context Menu.
https://bugs.webkit.org/show_bug.cgi?id=210936
Summary Long pressing attachments in Notes does not activate Context Menu.
Megan Gardner
Reported 2020-04-23 14:38:03 PDT
Long pressing attachments in Notes does not activate Context Menu.
Attachments
Patch (1.77 KB, patch)
2020-04-23 14:40 PDT, Megan Gardner
no flags
Patch for landing (1.76 KB, patch)
2020-04-23 16:36 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-04-23 14:40:56 PDT
Tim Horton
Comment 2 2020-04-23 14:41:45 PDT
Comment on attachment 397386 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=397386&action=review > Source/WebKit/ChangeLog:10 > + menu and it's items fail. We should probably be passing this information on "its"
Megan Gardner
Comment 3 2020-04-23 16:36:06 PDT
Created attachment 397397 [details] Patch for landing
EWS
Comment 4 2020-04-23 16:59:35 PDT
Committed r260608: <https://trac.webkit.org/changeset/260608> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397397 [details].
Radar WebKit Bug Importer
Comment 5 2020-04-23 17:00:21 PDT
Megan Gardner
Comment 6 2020-04-27 09:43:15 PDT
Note You need to log in before you can comment on or make changes to this bug.