Long pressing attachments in Notes does not activate Context Menu. https://bugs.webkit.org/show_bug.cgi?id=210936 <rdar://problem/61171576>

Reviewed by Tim Horton.

Not having the ID available for notes makes their code to create the context
menu and its items fail. We should probably be passing this information on
for any element if we have it.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::selectionPositionInformation):


Canonical link: https://commits.webkit.org/223831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260608 268f45cc-cd09-0410-ab3c-d52691b4dbfc